refactor: :lipstick: cleanup unused classes and redundant code
- Removed unused CSS classes for better readability and maintainability.
 - Eliminated duplicate code to streamline styles.
 - Organized stylesheets for better structure and clarity.
 - Made adjustments to some Bootstrap styles to fix broken rows.

--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
 					<div class="row">
 						<div class="col-sm-4">
 							<div class="box">
-								<h3>VISUAL</h3>
+								<h3 class="heading-underline-decoration">VISUAL</h3>
 								<p>Blind, low vision, and colorblind users will have difficulties percieving your page. Is it structured correctly, does every visual element have a text equivelent?</p>
 								<i class="fa fa-blind"></i>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="box">
-								<h3>MOTOR SKILLS</h3>
+								<h3 class="heading-underline-decoration">MOTOR SKILLS</h3>
 								<p>Users with motor skills dissabilities are not able to use a mouse to browse your site. Can you do the same and navigate this site without one?</p>
 								<i class="fab fa-accessible-icon"></i>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="box">
-								<h3>OTHERS</h3>
+								<h3 class="heading-underline-decoration">OTHERS</h3>
 								<p>Users with speech and hearing disabilities require captions on all video and audio multimedia. Users with cognative disablities require clean consistent navigation and design.</p>
 								<i class="fa fa-deaf"></i>
 							</div>
@@ -125,6 +125,7 @@
 								</div>
 							</div>
 						</div>
+						<div class="clearfix"></div>
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="media">
 								<div class="media-left media-middle">
@@ -136,7 +137,6 @@
 								</div>
 							</div>
 						</div>
-						<div class="clearfix"></div>
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="media">
 								<div class="media-left media-middle">
@@ -148,6 +148,7 @@
 								</div>
 							</div>
 						</div>
+						<div class="clearfix"></div>
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="media">
 								<div class="media-left media-middle">
@@ -206,7 +207,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12">
-								<h2 class="sub_title">FAMOUS PIRATE MOVIES</h2>
+								<h2 class="sub_title heading-underline-decoration">FAMOUS PIRATE MOVIES</h2>
 							</div>
 							<div class="home_list">
 								<ul>
@@ -232,6 +233,7 @@
 											</div>
 										</div>
 									</li>
+									<div class="clearfix"></div>
 									<li class="col-md-3 col-sm-6 col-xs-12">
 										<div class="thumbnail">
 											<a href="https://en.wikipedia.org/wiki/The_Pirates_of_Penzance_(film)">
@@ -354,9 +356,9 @@
 							<li><a href="https://www.linkedin.com/company/level-access"><i class="fab fa-linkedin"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-md-3 col-sm-6 col-xs-12 fbox">
+					<div class="related-links col-md-3 col-sm-6 col-xs-12 fbox">
 						<h4>PIECES O'EIGHT</h4>
-						<ul class="big">
+						<ul>
 							<li><a href="framework-out-of-scope/page2.html">Piece One</a></li>
 							<li><a href="framework-out-of-scope/page2.html">Piece Two</a></li>
 							<li><a href="framework-out-of-scope/page2.html">Piece Three</a></li>
