fix: :lipstick: update index.html to reflect previous style changes

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 			<div class="top">
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-6">
+						<div>
 							<p>Yo ho, yo ho, an a11y life for me!</p>
 						</div>
-						<div class="col-sm-6">
-							<ul class="list-inline pull-right">
+						<div>
+							<ul class="social-media-links">
 								<li><a href="https://www.facebook.com/LevelAccessA11y/"><i class="fab fa-facebook"></i></a></li>
 								<li><a href="https://twitter.com/levelaccessa11y"><i class="fab fa-twitter"></i></a></li>
 								<li><a href="https://www.linkedin.com/company/level-access"><i class="fab fa-linkedin"></i></a></li>
@@ -350,23 +350,27 @@
 					<div class="col-md-3 col-sm-6 col-xs-12 fbox">
 						<h4>Pirate A11y</h4>
 						<p class="text">All images used under the terms of the license agreement from <a href="https://pixabay.com/service/terms/#license">Pixabay</a>. We may be bloodthirsty pirates, but we are not about to break copyright laws.</p>
-						<ul class="list-inline">
+						<ul class="social-media-links">
 							<li><a href="https://www.facebook.com/LevelAccessA11y/"><i class="fab fa-facebook-square"></i></a></li>
 							<li><a href="https://twitter.com/levelaccessa11y"><i class="fab fa-twitter-square"></i></a></li>
 							<li><a href="https://www.linkedin.com/company/level-access"><i class="fab fa-linkedin"></i></a></li>
 						</ul>
 					</div>
-					<div class="related-links col-md-3 col-sm-6 col-xs-12 fbox">
+					<div class="related-links col-md-3 col-sm-6 col-xs-12">
 						<h4>PIECES O'EIGHT</h4>
 						<ul>
-							<li><a href="framework-out-of-scope/page2.html">Piece One</a></li>
-							<li><a href="framework-out-of-scope/page2.html">Piece Two</a></li>
-							<li><a href="framework-out-of-scope/page2.html">Piece Three</a></li>
-							<li><a href="framework-out-of-scope/page2.html">Piece Four</a></li>
-							<li><a href="framework-out-of-scope/page2.html">Piece Five</a></li>
-							<li><a href="framework-out-of-scope/page2.html">Piece Six</a></li>
-							<li><a href="framework-out-of-scope/page2.html">Piece Seven</a></li>
-							<li><a href="framework-out-of-scope/page2.html">Piece Eight</a></li>
+							<div>
+								<li><a href="framework-out-of-scope/page2.html">Piece One</a></li>
+								<li><a href="framework-out-of-scope/page2.html">Piece Two</a></li>
+								<li><a href="framework-out-of-scope/page2.html">Piece Three</a></li>
+								<li><a href="framework-out-of-scope/page2.html">Piece Four</a></li>
+							</div>
+							<div>
+								<li><a href="framework-out-of-scope/page2.html">Piece Five</a></li>
+								<li><a href="framework-out-of-scope/page2.html">Piece Six</a></li>
+								<li><a href="framework-out-of-scope/page2.html">Piece Seven</a></li>
+								<li><a href="framework-out-of-scope/page2.html">Piece Eight</a></li>
+							</div>
 						</ul>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12 fbox">
