--- a/index.html
+++ b/index.html
@@ -19,11 +19,32 @@
 						</div>
 						<div>
 							<ul class="social-media-links">
-								<li><a href="https://www.facebook.com/LevelAccessA11y/"><i class="fab fa-facebook"></i></a></li>
-								<li><a href="https://twitter.com/levelaccessa11y"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="https://www.linkedin.com/company/level-access"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="mailto:info@levelaccess.com"><i class="far fa-envelope"></i></a></li>
-								<li><a href="tel:18008899659"><i class="fas fa-phone"></i> 1.800.889.9659</a></li>
+								<li>
+									<a href="https://www.facebook.com/LevelAccessA11y/" aria-label="Facebook">
+										<i class="fab fa-facebook" aria-hidden="true"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://twitter.com/levelaccessa11y"  aria-label="Twitter">
+										<i class="fab fa-twitter" aria-hidden="true"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://www.linkedin.com/company/level-access" aria-label="LinkedIn">
+										<i class="fab fa-linkedin" aria-hidden="true"></i>
+									</a>
+								</li>
+								<li>
+									<a href="mailto:info@levelaccess.com" aria-label="Email us at info@levelaccess.com">
+										<i class="far fa-envelope" aria-hidden="true"></i>
+									</a>
+								</li>
+								<li>
+									<a href="tel:18008899659" aria-label="Call us at">
+										<i class="fas fa-phone" aria-hidden="true"></i> 
+										<span>1 800 889 9659</span>
+									</a>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -31,28 +52,47 @@
 			</div>
 			<nav class="navbar navbar-default">
 				<div class="container">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse">
-					<span class="sr-only">Toggle Navigation</span>
-					<i class="fa fa-bars"></i>
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-haspopup="true" aria-expanded="false">
+						<span id="menu-button-label" class="sr-only">Menu</span>
+						<i class="fa fa-bars" aria-hidden="true"></i>
 					</button>
 					<a href="index.html" class="navbar-brand">
-					<img src="framework-out-of-scope/img/logo.png" alt="Post">
+						<img src="framework-out-of-scope/img/logo.png" alt="Post">
 					</a>
 					<div class="collapse navbar-collapse" id="bs-navbar-collapse">
-						<ul class="nav navbar-nav main-navbar-nav">
-							<li class="active"><a href="index.html" title="">HOME</a></li>
-							<li class="dropdown">
-								<a href="#" title="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Famous Pirates <span class="caret"></span></a>
-								<ul class="dropdown-menu">
-									<li><a href="https://en.wikipedia.org/wiki/Blackbeard" title="">Blackbeard</a></li>
-									<li><a href="https://en.wikipedia.org/wiki/William_Kidd" title="">Captain Kidd</a></li>
-									<li><a href="https://en.wikipedia.org/wiki/Captain_Hook" title="">Captian Hook</a></li>
-									<li><a href="https://en.wikipedia.org/wiki/Pittsburgh_Pirates" title="">Pittsburg</a></li>
+						<ul class="nav navbar-nav main-navbar-nav" aria-labelledby="menu-button-label" role="menu">
+							<li class="active" role="none">
+								<a href="index.html" role="menuitem">HOME</a>
+							</li>
+							<li class="dropdown" role="none">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" id="submenu-famous-pirates" aria-haspopup="true" aria-expanded="false">
+									Famous Pirates
+									<span aria-hidden="true" class="caret"></span>
+								</a>
+								<ul class="dropdown-menu" aria-labelledby="submenu-famous-pirates">
+									<li role="none">
+										<a href="https://en.wikipedia.org/wiki/Blackbeard" role="menuitem">Blackbeard</a>
+									</li>
+									<li role="none">
+										<a href="https://en.wikipedia.org/wiki/William_Kidd" role="menuitem">Captain Kidd</a>
+									</li>
+									<li role="none">
+										<a href="https://en.wikipedia.org/wiki/Captain_Hook" role="menuitem">Captian Hook</a>
+									</li>
+									<li role="none">
+										<a href="https://en.wikipedia.org/wiki/Pittsburgh_Pirates" role="menuitem">Pittsburg</a>
+									</li>
 								</ul>
 							</li>
-							<li><a href="https://www.irs.gov/" title="">Pirate Services</a></li>
-							<li><a href="https://en.wikipedia.org/wiki/Queen_Anne%27s_Revenge" title="">Pirate Ships</a></li>
-							<li><a href="#contactModal" data-toggle="modal" data-target="#contactModal">Contact Us</a></li>
+							<li role="none">
+								<a href="https://www.irs.gov/" role="menuitem">Pirate Services</a>
+							</li>
+							<li role="none">
+								<a href="https://en.wikipedia.org/wiki/Queen_Anne%27s_Revenge" role="menuitem">Pirate Ships</a>
+							</li>
+							<li role="none">
+								<a href="#contactModal" data-toggle="modal" data-target="#contactModal" role="menuitem">Contact Us</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -182,7 +222,7 @@
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="media-body">
 								<a href="framework-out-of-scope/img/barbados-895144.png" target="_blank">
-								<img src="framework-out-of-scope/img/barbados-895144.png" alt="Map" class="img-responsive">
+									<img src="framework-out-of-scope/img/barbados-895144.png" alt="Barbados map highlighting four possible treasure locations in red and three known pirate battle sites in orange. Notably, the first potential treasure site aligns with the second battle location." class="img-responsive">
 								</a>
 							</div>
 						</div>
@@ -212,51 +252,47 @@
 							<div class="home_list">
 								<ul>
 									<li class="col-md-3 col-sm-6 col-xs-12">
-										<div class="thumbnail">
-											<a href="https://en.wikipedia.org/wiki/Muppet_Treasure_Island">
-											<img src="framework-out-of-scope/img/movie1.jpg" class="img-responsive img-rounded" alt="Post">
-											</a>
+										<article class="thumbnail">
 											<div class="caption">
-												<h3><a href="https://en.wikipedia.org/wiki/Muppet_Treasure_Island">Treasure Island</a></h3>
+												<h3>
+													<a href="https://en.wikipedia.org/wiki/Muppet_Treasure_Island">Treasure Island</a>
+												</h3>
 												<p>There have been lots of versions of this over the years, but the version staring the Muppets is the best.</p>
-												<a href="https://en.wikipedia.org/wiki/Muppet_Treasure_Island" class="btn btn-link" role="button">More</a>
 											</div>
-										</div>
+											<img src="framework-out-of-scope/img/movie1.jpg" class="img-responsive img-rounded" alt="">
+										</article>
 									</li>
 									<li class="col-md-3 col-sm-6 col-xs-12">
-										<div class="thumbnail">
-											<a href="https://en.wikipedia.org/wiki/The_Sea_Hawk_(1940_film)"><img src="framework-out-of-scope/img/movie2.jpg" class="img-responsive img-rounded" alt="Post"></a>
+										<article class="thumbnail">
 											<div class="caption">
 												<h3><a href="https://en.wikipedia.org/wiki/The_Sea_Hawk_(1940_film)">The Sea Hawk</a></h3>
 												<p>The famous Errol Flynn movie. It also has one of the best fim scores by Erich Korngold.</p>
-												<a href="https://en.wikipedia.org/wiki/The_Sea_Hawk_(1940_film)" class="btn btn-link" role="button">More</a>
 											</div>
-										</div>
+											<img src="framework-out-of-scope/img/movie2.jpg" class="img-responsive img-rounded" alt="">
+										</article>
 									</li>
 									<div class="clearfix"></div>
 									<li class="col-md-3 col-sm-6 col-xs-12">
-										<div class="thumbnail">
-											<a href="https://en.wikipedia.org/wiki/The_Pirates_of_Penzance_(film)">
-											<img src="framework-out-of-scope/img/movie3.jpg" class="img-responsive img-rounded" alt="Post">
-											</a>
+										<article class="thumbnail">
 											<div class="caption">
-												<h3><a href="https://en.wikipedia.org/wiki/The_Pirates_of_Penzance_(film)">Pirates of Penzance</a></h3>
+												<h3>
+													<a href="https://en.wikipedia.org/wiki/The_Pirates_of_Penzance_(film)">Pirates of Penzance</a>
+												</h3>
 												<p>Based on Gilbert and Sullivan's 1879 comic opera of the same name, this film stars Kevin Kline, Angela Lansbury, and Linda Ronstadt. </p>
-												<a href="https://en.wikipedia.org/wiki/The_Pirates_of_Penzance_(film)" class="btn btn-link" role="button">More</a>
 											</div>
-										</div>
+											<img src="framework-out-of-scope/img/movie3.jpg" class="img-responsive img-rounded" alt="">
+										</article>
 									</li>
 									<li class="col-md-3 col-sm-6 col-xs-12">
-										<div class="thumbnail">
-											<a href="https://en.wikipedia.org/wiki/Pirates_of_the_Caribbean:_The_Curse_of_the_Black_Pearl">
-											<img src="framework-out-of-scope/img/movie4.jpg" class="img-responsive img-rounded" alt="Post">
-											</a>
+										<article class="thumbnail">
 											<div class="caption">
-												<h3><a href="https://en.wikipedia.org/wiki/Pirates_of_the_Caribbean:_The_Curse_of_the_Black_Pearl">Pirates of the Caribbean: The Curse of the Black Pearl</a></h3>
+												<h3>
+													<a href="https://en.wikipedia.org/wiki/Pirates_of_the_Caribbean:_The_Curse_of_the_Black_Pearl">Pirates of the Caribbean: The Curse of the Black Pearl</a>
+												</h3>
 												<p>The first film in the Pirates of the Caribbean film series. One of the only movies ever based on an amusement park ride.</p>
-												<a href="https://en.wikipedia.org/wiki/Pirates_of_the_Caribbean:_The_Curse_of_the_Black_Pearl" class="btn btn-link" role="button">More</a>
 											</div>
-										</div>
+											<img src="framework-out-of-scope/img/movie4.jpg" class="img-responsive img-rounded" alt="">
+										</article>
 									</li>
 								</ul>
 							</div>
@@ -345,18 +381,30 @@
 			</section>
 		</main>
 		<footer class="site-footer">
-			<div class="container">
+			<div class="container main-footer">
 				<div class="row">
-					<div class="col-md-3 col-sm-6 col-xs-12 fbox">
+					<div>
 						<h4>Pirate A11y</h4>
 						<p class="text">All images used under the terms of the license agreement from <a href="https://pixabay.com/service/terms/#license">Pixabay</a>. We may be bloodthirsty pirates, but we are not about to break copyright laws.</p>
 						<ul class="social-media-links">
-							<li><a href="https://www.facebook.com/LevelAccessA11y/"><i class="fab fa-facebook-square"></i></a></li>
-							<li><a href="https://twitter.com/levelaccessa11y"><i class="fab fa-twitter-square"></i></a></li>
-							<li><a href="https://www.linkedin.com/company/level-access"><i class="fab fa-linkedin"></i></a></li>
+							<li>
+								<a href="https://www.facebook.com/LevelAccessA11y/" aria-label="Facebook">
+									<i class="fab fa-facebook" aria-hidden="true"></i>
+								</a>
+							</li>
+							<li>
+								<a href="https://twitter.com/levelaccessa11y"  aria-label="Twitter">
+									<i class="fab fa-twitter" aria-hidden="true"></i>
+								</a>
+							</li>
+							<li>
+								<a href="https://www.linkedin.com/company/level-access" aria-label="LinkedIn">
+									<i class="fab fa-linkedin" aria-hidden="true"></i>
+								</a>
+							</li>
 						</ul>
 					</div>
-					<div class="related-links col-md-3 col-sm-6 col-xs-12">
+					<div class="related-links">
 						<h4>PIECES O'EIGHT</h4>
 						<ul>
 							<div>
@@ -373,7 +421,7 @@
 							</div>
 						</ul>
 					</div>
-					<div class="col-md-3 col-sm-6 col-xs-12 fbox">
+					<div>
 						<table class="table table-hover table-sm">
 							<thead>
 								<tr>
@@ -384,28 +432,38 @@
 							<tbody>
 								<tr>
 									<td>Kevin</td>
-									<td><a href="mailto:kevin.murphy@levelaccess.com">Email</a></td>
+									<td><a href="mailto:kevin.murphy@levelaccess.com">kevin.murphy@levelaccess.com</a></td>
 								</tr>
 								<tr>
 									<td>Kara</td>
-									<td><a href="mailto:kara.vanroekel@levelaccess.com">Email</a></td>
+									<td><a href="mailto:kara.vanroekel@levelaccess.com">kara.vanroekel@levelaccess.com</a></td>
 								</tr>
 								<tr>
 									<td>Kim</td>
-									<td><a href="mailto:kim.collins@levelaccess.com">Email</a></td>
+									<td><a href="mailto:kim.collins@levelaccess.com">kim.collins@levelaccess.com</a></td>
 								</tr>
 								<tr>
 									<td>Gavin</td>
-									<td><a href="mailto:gavin.ogston@levelaccess.com">Email</a></td>
+									<td><a href="mailto:gavin.ogston@levelaccess.com">gavin.ogston@levelaccess.com</a></td>
 								</tr>
 							</tbody>
 						</table>
 					</div>
-					<div class="col-md-3 col-sm-6 col-xs-12 fbox">
+					<div class="contact-information">
 						<h4>Level Access</h4>
 						<p class="text">This sample website was created for accessibility training by Level Access.</p>
-						<p><a href="tel:18008899659"><i class="fas fa-phone"></i> 1.800.889.9659</a></p>
-						<p><a href="mailto:info@levelaccess.com"><i class="far fa-envelope"></i> info@levelaccess.com</a></p>
+						<p>
+							<a href="tel:18008899659" aria-label="Call us at">
+								<i class="fas fa-phone" aria-hidden="true"></i>
+								<span>1 800 889 9659</span>
+							</a>
+						</p>
+						<p>
+							<a href="mailto:info@levelaccess.com" aria-label="Email us at info@levelaccess.com">
+								<i class="far fa-envelope" aria-hidden="true"></i> 
+								<span>info@levelaccess.com</span>
+							</a>
+						</p>
 					</div>
 				</div>
 			</div>
