feat: :wheelchair: implements a skip link to main content for users interactive with keyboard only

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
+		<!-- Skip Link -->
+		<a href="#main-content" id="skip-link">Skip to Content</a>
 		<header class="site-header" role="banner">
 			<div class="top">
 				<div class="container">
@@ -98,7 +100,7 @@
 				</div>
 			</nav>
 		</header>
-		<main class="site-main">
+		<main class="site-main" id="main-content">
 			<section class="hero_area">
 				<div class="hero_content">
 					<div class="container">
