fix: :wheelchair: add atribute `aria-modal = true` to improve the information given to assistive technologies

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 				</div>
 			</div>
 		</footer>
-		<div class="modal fade" tabindex="-1" role="dialog" id="contactModal" aria-labelledby="contactModalTitle" aria-describedby="contactModalBody">
+		<div class="modal fade" tabindex="-1" role="dialog" id="contactModal" aria-labelledby="contactModalTitle" aria-describedby="contactModalBody" aria-modal="true">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
