fix: :wheelchair: add outlines to all focusable elements to improve keyboard navigation

--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-4 col-sm-6 col-xs-12">
-							<div class="media-body">
-								<a href="framework-out-of-scope/img/barbados-895144.png" target="_blank">
-									<img src="framework-out-of-scope/img/barbados-895144.png" alt="Barbados map highlighting four possible treasure locations in red and three known pirate battle sites in orange. Notably, the first potential treasure site aligns with the second battle location." class="img-responsive">
+							<div class="media-body" id="barbados-map-container">
+								<a href="./framework-out-of-scope/img/barbados-895144.png" target="_blank">
+									<img src="./framework-out-of-scope/img/barbados-895144.png" alt="Barbados map highlighting four possible treasure locations in red and three known pirate battle sites in orange. Notably, the first potential treasure site aligns with the second battle location." class="img-responsive">
 								</a>
 							</div>
 						</div>
