--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="tel:18008899659" aria-label="Call us at">
+									<a href="tel:18008899659" aria-label="Call us at 1 800 889 9659">
 										<i class="fas fa-phone" aria-hidden="true"></i> 
 										<span>1 800 889 9659</span>
 									</a>
@@ -58,8 +58,8 @@
 						<span id="menu-button-label" class="sr-only">Menu</span>
 						<i class="fa fa-bars" aria-hidden="true"></i>
 					</button>
-					<a href="index.html" class="navbar-brand">
-						<img src="framework-out-of-scope/img/logo.png" alt="Post">
+					<a href="index.html" class="navbar-brand" aria-label="Go to home">
+						<img src="framework-out-of-scope/img/logo.png" alt="">
 					</a>
 					<div class="collapse navbar-collapse" id="bs-navbar-collapse">
 						<ul class="nav navbar-nav main-navbar-nav" aria-labelledby="menu-button-label" role="menu">
@@ -119,21 +119,21 @@
 						<div class="col-sm-4">
 							<div class="box">
 								<h3 class="heading-underline-decoration">VISUAL</h3>
-								<p>Blind, low vision, and colorblind users will have difficulties percieving your page. Is it structured correctly, does every visual element have a text equivelent?</p>
+								<p>Blind, low vision, and colorblind users will have difficulties perceiving your page. Is it structured correctly, does every visual element have a text equivalent?</p>
 								<i class="fa fa-blind" aria-hidden="true"></i>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="box">
 								<h3 class="heading-underline-decoration">MOTOR SKILLS</h3>
-								<p>Users with motor skills dissabilities are not able to use a mouse to browse your site. Can you do the same and navigate this site without one?</p>
+								<p>Users with motor skills disabilities are not able to use a mouse to browse your site. Can you do the same and navigate this site without one?</p>
 								<i class="fab fa-accessible-icon" aria-hidden="true"></i>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="box">
 								<h3 class="heading-underline-decoration">OTHERS</h3>
-								<p>Users with speech and hearing disabilities require captions on all video and audio multimedia. Users with cognative disablities require clean consistent navigation and design.</p>
+								<p>Users with speech and hearing disabilities require captions on all video and audio multimedia. Users with cognitive disabilities require clean consistent navigation and design.</p>
 								<i class="fa fa-deaf" aria-hidden="true"></i>
 							</div>
 						</div>
@@ -230,13 +230,24 @@
 						</div>
 						<div class="col-md-8 col-sm-6 col-xs-12">
 							<div class="media-body">
-								<p><strong>Sam Lord</strong></p>
+								<h3>Sam Lord</h3>
 								<p>
-									Sam Lord must have been one of the most unusual pirates of the caribbean! Rather than taking to the seas Sam Lord found a unique, and very profitable, way to plunder ships in the Caribbean.<br /><br />Legend has it that Sam Lord hung lanterns in the coconut trees on the beach near his castle to attract ships. Captains mistook the lanterns for the lights of the capital city and wrecked their ships on the reefs.<br /><br />Sam Lord, one of the most creative pirates of the Caribbean region, would then plunder the ships!
+									Sam Lord must have been one of the most unusual pirates of the caribbean! Rather than taking to the seas Sam Lord found a unique, and very profitable, way to plunder ships in the Caribbean.
 								</p>
-								<p><strong>Stede Bonnet</strong></p>
 								<p>
-									Known as the pirate gentleman, Stede Bonnet became one of the pirates of the Caribbean in a most unusual way!<br /><br />A retired British army major and well off plantation owner in Barbados, the middle aged Major Stede Bonnet suddenly turned to piracy in early 1717 and actually <em>purchased</em> his own pirate ship, an unheard of act among the pirates of the Caribbean!<br /><br />Bonnet sailed his pirate ship "Revenge" off the New England Coast, capturing and burning several ships, before returning to the Caribbean. Here he befriended perhaps the most famous of the pirates of the Caribbean - Blackbeard!
+									Legend has it that Sam Lord hung lanterns in the coconut trees on the beach near his castle to attract ships. Captains mistook the lanterns for the lights of the capital city and wrecked their ships on the reefs.
+								</p>
+								<p>
+									Sam Lord, one of the most creative pirates of the Caribbean region, would then plunder the ships!
+								</p>
+								<h3>Stede Bonnet</h3>
+								<p>
+									Known as the pirate gentleman, Stede Bonnet became one of the pirates of the Caribbean in a most unusual way!
+								</p>
+								<p>
+									A retired British army major and well off plantation owner in Barbados, the middle aged Major Stede Bonnet suddenly turned to piracy in early 1717 and actually <em>purchased</em> his own pirate ship, an unheard of act among the pirates of the Caribbean!
+								</p>
+									<p>Bonnet sailed his pirate ship "Revenge" off the New England Coast, capturing and burning several ships, before returning to the Caribbean. Here he befriended perhaps the most famous of the pirates of the Caribbean - Blackbeard!
 								</p>
 								<p>These two pirates of the Caribbean led unusual lives and live on in legend even today...</p>
 							</div>
@@ -356,7 +367,7 @@
 										</button>
 										<button class="right carousel-control" href="#myCarousel" data-slide="next">
 											<i class="fas fa-chevron-right" aria-hidden="true"></i>
-											<span class="sr-only">Previous</span>
+											<span class="sr-only">next</span>
 										</button>
 									</div>
 								</div>
@@ -465,7 +476,7 @@
 						<h2>Level Access</h2>
 						<p class="text">This sample website was created for accessibility training by Level Access.</p>
 						<p>
-							<a href="tel:18008899659" aria-label="Call us at">
+							<a href="tel:18008899659" aria-label="Call us at 1 800 889 9659">
 								<i class="fas fa-phone" aria-hidden="true"></i>
 								<span>1 800 889 9659</span>
 							</a>
@@ -530,7 +541,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<!-- Note: this button only closes the modal, which is intentional for this testing document. Consisder that aspect out of scope. -->
+						<!-- Note: this button only closes the modal, which is intentional for this testing document. Consider that aspect out of scope. -->
 						<button type="button" class="btn btn-primary" data-dismiss="modal">Send</button>
 					</div>
 				</div>
